fix logout button not showing

--- a/src/components/sidebar/Sidebar.css
+++ b/src/components/sidebar/Sidebar.css
@@ -45,7 +45,7 @@
     display: flex;
     align-items: center;
     border-radius: 10px;
-    margin-top: 350px;
+    margin-top: 300px;
 }
 
 .sidebarListItem1:hover {
